src/test/deca/syntax/valid/class_decl_method_01.deca
// Description:
//    Programme testant la déclaration d'une classe avec méthode.
//
// Resultats:
//		- 0 si le test est réussi
//
//
// Historique:
//    cree le 16/01/2023

class A {
	int a;
	int add(int b) {
		return a + b;
	}
}