src/test/deca/syntax/invalid/class_wrong_method_name.deca
// Description:
//    Programme testant la déclaration d'une methode avec un nom de method incorrect
//
// Resultats:
//      Erreur
//
//
// Historique:
//    cree le 16/01/2023


class A {
	void class() {
		int x;
    }
}

